[FE,BE,DOC] Edit report detail
